syntax = "proto3";

package cart;

option go_package = "./pkg/pb";

service Cart {
  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse) {};
  rpc GetCart(GetCartRequest) returns (GetCartResponse) {};
}
message AddToCartRequest{
    int64 productID=1;
    int64 userID=2;
}
message CartDetails{
    int64 productID=1; 
    string productName=2;
    float Quantity=3;  
    float totalPrice=4; 
}
message AddToCartResponse{
    string username=1;
    float price=2;
    CartDetails cart=3;
    string Error=4;
}
message GetCartRequest{
    int64 userID=1;
}
message GetCartResponse{
    string username=1;
    float price=2;
    CartDetails cart=3;
    string Error=4;
}